base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exceptions
  namespace: exceptions
spec:
  selector:
    matchLabels:
      app: hello-openshift
  replicas: 3
  template:
    metadata:
      labels:
        app: hello-openshift
    spec:
      containers:
        - name: hello-openshift
          image: image-registry.openshift-image-registry.svc:5000/exceptions-a/test-a:2
          ports:
            - containerPort: 8080
