base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: exceptions
  namespace: exceptions
  labels:
    app: exceptions
spec:
  selector:
    app: hello-openshift
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
